# ramparos2

./: .gitignore  Dockerfile  docker-compose.yml  rampa_ros.yml  ros_instructions.txt
Ros/catkin_ws/: ReadMe.md
Ros/catkin_ws/devel/include/moveit_msgs/: ApplyPlanningSceneRequest.h  AttachedCollisionObject.h  CollisionObject.h  DisplayRobotState.h  DisplayTrajectory.h  GetCartesianPathRequest.h  GetCartesianPathResponse.h  GetMotionPlanRequest.h  GetMotionPlanResponse.h  GetMotionSequenceRequest.h  GetMotionSequenceResponse.h  GetPlanningSceneResponse.h  GetPositionFKRequest.h  GetPositionIKRequest.h  GetPositionIKResponse.h  GetRobotStateFromWarehouseResponse.h  GetStateValidityRequest.h  GraspPlanningRequest.h  MotionPlanDetailedResponse.h  MotionPlanRequest.h  MotionPlanResponse.h  MotionSequenceItem.h  MotionSequenceRequest.h  MotionSequenceResponse.h  MoveGroupAction.h  MoveGroupActionGoal.h  MoveGroupActionResult.h  MoveGroupGoal.h  MoveGroupResult.h  MoveGroupSequenceAction.h  MoveGroupSequenceActionGoal.h  MoveGroupSequenceActionResult.h  MoveGroupSequenceGoal.h  MoveGroupSequenceResult.h  PickupAction.h  PickupActionGoal.h  PickupActionResult.h  PickupGoal.h  PickupResult.h  PlaceAction.h  (+10 more)
Ros/catkin_ws/devel/include/ur10_mover/: DiscardServiceRequest.h  DiscardServiceResponse.h  ExecutionServiceRequest.h  ExecutionServiceResponse.h  GetTrainingDataServiceRequest.h  GetTrainingDataServiceResponse.h  GripperServiceRequest.h  GripperServiceResponse.h  ListOfFloats.h  ListOfPoses.h  PlannerService.h  PlannerServiceRequest.h  PlannerServiceResponse.h  SampleServiceRequest.h  SampleServiceResponse.h  StateService.h  StateServiceRequest.h  StateServiceResponse.h  TrainingDataServiceRequest.h  TrainingDataServiceResponse.h  TrainingServiceRequest.h  TrainingServiceResponse.h
Ros/catkin_ws/devel/lib/d435i_xarm_setup/: findobj2d_grasp_api  findobj2d_grasp_moveit  obj2base
Ros/catkin_ws/devel/lib/pkgconfig/: camera_demo.pc  d435i_xarm_setup.pc  dual_xarm6_moveit_config.pc  lite6_moveit_config.pc  moveit_msgs.pc  multi_xarm5.pc  ros_tcp_endpoint.pc  run_recorded_traj.pc  xarm_api.pc  (+23 more)
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/: .gitignore  CMakeLists.txt  Makefile  ReadMe.md  ReleaseNotes.md
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/demo/csharp_studio/xarm/: xarm.vcxproj  xarm.vcxproj.filters  xarm_wrapper.cc  xarm_wrapper.h
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/demo/csharp_studio/xarm_csharp_demo/: Program.cs  XArmAPI.cs  XArmWrapperAPI.cs
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/doc/: xarm_api_code.md  xarm_cplus_api.md
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/example/: 0001-event_register.cc  0002-get_property.cc  0003-api_get.cc  0004-servo_attach_detach.cc  1001-move_line.cc  1004-move_arc_line.cc  1006-move_tool_line.cc  1007-counter.cc  1008-move_line_aa.cc  10086-cali_offset.cc  1009-cartesian_velocity_control.cc  2000-joint_velocity_control.cc  2001-move_joint.cc  3001-move_circle.cc  3002-record_trajectory.cc  3003-playback_trajectory.cc  3004-get_report_data.cc  3005-task_feedback.cc  3006-standard_modbus_tcp.cc  5000-set_tgpio_modbus.cc  5001-get_tgpio_digital.cc  5002-get_tgpio_analog.cc  5003-set_tgpio_digital.cc  5004-set_gripper.cc  5005-get_cgpio_digital_analog.cc  5006-set_cgpio_digital_analog.cc  5008-get_cgpio_state.cc  5009-set_bio_gripper.cc  6001-set_reduced_mode.cc  6002-set_fence_mode.cc  7001-servo_j.cc  7002-servo_cartesian.cc  7003-servo_cartesian_aa.cc  8000-load_identify_current.cc  8001-force_tech.cc  8002-admittance_control.cc  8003-force_control.cc  8004-load_identify.cc  8005-read_force_data.cc  8006-save_force_zero.cc  (+4 more)
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/include/xarm/core/: connect.h  report_data.h
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/include/xarm/core/common/: queue_memcpy.h
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/include/xarm/core/instruction/: uxbus_cmd.h  uxbus_cmd_config.h  uxbus_cmd_ser.h  uxbus_cmd_tcp.h
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/include/xarm/core/os/: network.h
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/include/xarm/core/port/: ser.h  socket.h
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/include/xarm/core/utils/: log.h  thread_pool.h  timer.h  utils.h
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/include/xarm/wrapper/: xarm_api.h
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/src/xarm/core/: connect.cc  report_data.cc  xarm_config.cc
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/src/xarm/core/common/: queue_memcpy.cc
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/src/xarm/core/instruction/: uxbus_cmd.cc  uxbus_cmd_ser.cc  uxbus_cmd_tcp.cc
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/src/xarm/core/os/: network.cc
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/src/xarm/core/os/bak/: network_new.cc  network_old.cc  thread.cc
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/src/xarm/core/port/: ser.cc  socket.cc
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/src/xarm/core/utils/: log.cc
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/src/xarm/wrapper/: xarm_api.cc  xarm_bio.cc  xarm_events.cc  xarm_ft_sensor.cc  xarm_gpio.cc  xarm_gripper.cc  xarm_linear_motor.cc  xarm_motion.cc  xarm_params.cc  xarm_record.cc  xarm_report.cc  xarm_robotiq.cc
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/visual_studio/6002-set_fence_mode/: 6002-set_fence_mode.vcxproj  6002-set_fence_mode.vcxproj.filters
Ros/catkin_ws/src/xarm_ros/xarm_sdk/cxx/visual_studio/xarm/: xarm.vcxproj  xarm.vcxproj.filters
Unity/Quest3XRSApp/Assets/Oculus/: OculusProjectConfig.asset
Unity/Quest3XRSApp/Assets/Resources/: ROSConnectionPrefab.prefab
Unity/Quest3XRSApp/Assets/Scenes/: RunnableOnComputer.unity  TestScene.unity
Unity/Quest3XRSApp/ProjectSettings/: ProjectSettings.asset
(+291 files in other folders)
